<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NoweZamowienie">



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/order_details"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="1sp"
        android:background="@color/grey" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/adresDostawy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/delivery_adres"
        android:textColor="#7989E3"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/eTstreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/street"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:nextFocusDown="@+id/eThouseNo"
        android:textSize="20sp"
        tools:ignore="TouchTargetSizeCheck"/>

    <EditText
        android:id="@+id/eThouseNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/house_no"
        android:inputType="textNoSuggestions"
        android:padding="10dp"
        android:nextFocusDown="@+id/eTphoneNo"
        android:textSize="20sp"
        tools:ignore="TouchTargetSizeCheck"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"   >
    <TextView
        android:id="@+id/tVphoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/phone_number"
        android:textColor="#7989E3"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/eTphoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="#010519"
        android:textSize="20sp"
        android:hint="@string/numberOfPhone"
        tools:ignore="TouchTargetSizeCheck"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tVdeliveryTimeMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/deliveryTimeMax"
            android:textColor="#7989E3"
            android:textSize="16sp" />

        <EditText
                android:id="@+id/eTdeliveryTimeMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:layout_marginStart="10dp"
                android:hint="hh:mm"
                android:inputType="time"
                android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tVdeliveryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/deliveryTime"
            android:textColor="#7989E3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/eTdeliveryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:layout_marginStart="10dp"
            android:hint="hh:mm"
            android:inputType="time"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.bottomnavigation.BottomNavigationView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/back_button"
                    style="@style/Widget.AppCompat.ActionBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="Anuluj" />

                <Button
                    android:id="@+id/ok_order_button"
                    style="@style/Widget.AppCompat.ActionBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="Ok" />
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </LinearLayout>

</LinearLayout>





